# overgg-scraper

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
examples/: basic_usage.rs
selectors/: live_streams.toml  matches_brief.toml
src/: data_structs.rs  error.rs  http_client.rs  lib.rs  test_utils.rs
src/scrapers/: main_page.rs  mod.rs
