[package]
name = "overgg-scraper"
version = "0.1.0"
authors = ["Cldfire"]

[dependencies]
reqwest = "0.7"
error-chain = "0.10"
scraper = "0.4"
chrono = "0.4"
serde = { version = "1.0", optional = true, features = ["derive"] }
serde_json = { version = "1.0", optional = true }

[features]
default = []
derive-serde = ["serde", "chrono/serde"]
test-local-data = ["derive-serde", "serde_json"]
