[package]
name = "overgg-scraper"
version = "0.1.0"
authors = ["Cldfire"]

[dependencies]
error-chain = { version = "0.10", default-features = false }
if_chain = "0.1"
scraper = "0.4"
chrono = "0.4"
toml = "0.4"
serde = "1.0"
serde_derive = "1.0"
reqwest = { version = "0.7", optional = true }
serde_json = { version = "1.0", optional = true }

[features]
default = ["http-client"]
# Toggle for the `http_client` module
http-client = ["reqwest"]
derive-serde = ["chrono/serde"]
test-local-data = ["derive-serde", "serde_json"]
